Closed
Bug 1165793
Opened 9 years ago
Closed 8 years ago
Assembler-mips.cpp:207:14: error: 'js::jit::MIPSBuffer' has no member named 'executableCopy'
Categories
(Core :: JavaScript Engine, defect)
Core
JavaScript Engine
Tracking
()
RESOLVED
FIXED
mozilla41
Tracking | Status | |
---|---|---|
firefox41 | --- | fixed |
People
(Reporter: glandium, Unassigned)
References
Details
Attachments
(1 file)
2.51 KB,
patch
|
sstangl
:
review+
|
Details | Diff | Splinter Review |
Bug 1163168 removed js::jit::AssemblerBuffer::executableCopy
Comment 1•8 years ago
|
||
Comment 2•8 years ago
|
||
Comment on attachment 8622586 [details] [diff] [review] Bug_1165793.patch Review of attachment 8622586 [details] [diff] [review]: ----------------------------------------------------------------- Thanks for the patch. r+ with 4-space indentation.
Attachment #8622586 -
Flags: review+
Comment 4•8 years ago
|
||
https://hg.mozilla.org/mozilla-central/rev/f68aef04ed94
Status: NEW → RESOLVED
Closed: 8 years ago
status-firefox41:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla41
You need to log in
before you can comment on or make changes to this bug.
Description
•