Bug 1165793 - Add executableCopy() back for MIPS. r=sstangl

IonAssemblerBuffer::executableCopy() was erroneously removed
in Bug 1163168.